@@ -50,6 +50,41 @@ BOOST_AUTO_TEST_CASE( test_2 )
   BOOST_CHECK_EQUAL ( name.chunk(), 456789U ) ;
 }
 
+BOOST_AUTO_TEST_CASE( test_3 )
+{
+  XtcFileName name;
+  BOOST_CHECK_NO_THROW( name = XtcFileName("/dir", 1, 2, 3, 4) ) ;
+  BOOST_CHECK_EQUAL ( name.path(), "/dir/e1-r0002-s03-c04.xtc" ) ;
+  BOOST_CHECK_EQUAL ( name.basename(), "e1-r0002-s03-c04.xtc" ) ;
+  BOOST_CHECK_EQUAL ( name.expNum(), 1U ) ;
+  BOOST_CHECK_EQUAL ( name.run(), 2U ) ;
+  BOOST_CHECK_EQUAL ( name.stream(), 3U ) ;
+  BOOST_CHECK_EQUAL ( name.chunk(), 4U ) ;
+}
+
+BOOST_AUTO_TEST_CASE( test_4 )
+{
+  XtcFileName name;
+  BOOST_CHECK_NO_THROW( name = XtcFileName("/dir/", 1, 2, 3, 4) ) ;
+  BOOST_CHECK_EQUAL ( name.path(), "/dir/e1-r0002-s03-c04.xtc" ) ;
+  BOOST_CHECK_NO_THROW( name = XtcFileName("", 1, 2, 3, 4) ) ;
+  BOOST_CHECK_EQUAL ( name.path(), "e1-r0002-s03-c04.xtc" ) ;
+  BOOST_CHECK_NO_THROW( name = XtcFileName(".", 1, 2, 3, 4) ) ;
+  BOOST_CHECK_EQUAL ( name.path(), "./e1-r0002-s03-c04.xtc" ) ;
+}
+
+BOOST_AUTO_TEST_CASE( test_5 )
+{
+  XtcFileName name;
+  BOOST_CHECK_NO_THROW( name = XtcFileName("/dir", 123456, 234567, 345678, 456789) ) ;
+  BOOST_CHECK_EQUAL ( name.path(), "/dir/e123456-r234567-s345678-c456789.xtc" ) ;
+  BOOST_CHECK_EQUAL ( name.basename(), "e123456-r234567-s345678-c456789.xtc" ) ;
+  BOOST_CHECK_EQUAL ( name.expNum(), 123456U ) ;
+  BOOST_CHECK_EQUAL ( name.run(), 234567U ) ;
+  BOOST_CHECK_EQUAL ( name.stream(), 345678U ) ;
+  BOOST_CHECK_EQUAL ( name.chunk(), 456789U ) ;
+}
+
 BOOST_AUTO_TEST_CASE( test_fail_1 )
 {
   XtcFileName name;
